--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <h1>3+exe</h1>
     <h2>2006-2016</h2>
     <video width="100%" controls>
-      <source src="1w.mov" type="video/mp4">
+      <source src="http://7xjhy3.com1.z0.glb.clouddn.com/1w.mov" type="video/mp4">
           您的浏览器不支持Video标签。
     </video>
 
